--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useTimezone=true&serverTimezone=UTC&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useTimezone=true&serverTimezone=UTC;
 spring.datasource.username=root
 spring.datasource.password=root
 
-
-spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.test-on-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update 
+
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.naming.pysical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImp
-server.port= 8080
-
-
-spring.jackson.serialization.write-dates-as-timestamps=false
-spring.jackson.serialization.write-dates-with-zone-id=true
