--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useTimezone=true&serverTimezone=UTC&useSSL=false
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/trajesdb?useTimezone=true&serverTimezone=UTC;
 spring.datasource.username=root
 spring.datasource.password=root
@@ -9,5 +10,5 @@ spring.datasource.tomcat.validation-query=SELECT 1
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
