--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,25 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.5.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         </dependencies>
+
+
 
     <build>
         <plugins>
