--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+server.servlet.session.timeout=1200
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=spring:session
