--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.session.jdbc.initialize-schema=always
 server.servlet.session.timeout=1200
 spring.session.redis.flush-mode=on_save
 spring.session.redis.namespace=spring:session
+
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
