--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ server.servlet.session.timeout=1200
 spring.session.redis.flush-mode=on_save
 spring.session.redis.namespace=spring:session
 
-spring.mvc.view.prefix=/templates
+spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
